src/App.css
body {
	color: #8e8e93;
	direction: ltr;
	overflow-x: hidden;
	height: 100%;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 13px;
	padding: 0;
	margin: 0;
	background: #f7f7f8;
	-webkit-font-smoothing: antialiased !important;
	line-height: 1.42857143
}

.App {
    display: block;
    /*padding: 40px;*/
}

#app {
  height: auto;
  min-height: 100%;
  position: relative;
  width: 100%;
  overflow: hidden;
}
#app .app-content {
  height: 100%;
}
#app .app-content:before, #app .app-content:after {
  content: " ";
  display: table;
}
#app .app-content:after {
  clear: both;
}

.main {
	margin-left: 260px;
}

h1 {
    color: #006f51;
}

h2 {
    color: #c96;
}

a {
  color: #006f51;
  background-color: transparent;
}

a, a:focus, a:hover, a:active {
  outline: 0 !important;
  text-decoration: none !important;
  cursor: pointer;
}

a:hover {
  color: #66A893;
}

.main-content {
  background: #ffffff !important;
  border-left: 1px lightgrey solid !important;
}

/* buttons */
.btn {
  transition: all 0.3s ease 0s !important;
  box-shadow: none !important;
  outline: none !important;
  position: relative;
  /*bootstrap css*/
  border-radius: 4px;
  padding: 6px;
  font-size: 14px;
  line-height: 1.42;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  user-select: none;
}
.btn-primary.btn-o {
  border: 1px solid #006f51;
  color: #006f51;
}
.btn-primary.btn-o:hover {
  border: 1px solid #66A893;
  color: #66A893;
}

.btn-o {
  background: none !important;
}
.btn-wide {
  min-width: 80px;
}

/* navbar */

.current-user {
  float: right;
  padding-right: 20px;
}

.navbar {
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1089;
  border: none;
  margin-bottom: 0;
  height: 65px;
}

.navbar .navbar-header {
  z-index: 10;
  background: #ffffff;
  border-bottom: 1px solid #c8c7cc;
  position: relative;
  height: 65px;
}

.navbar .navbar-header a {
  line-height: 65px;
  height: 65px;
}
.navbar .navbar-header .navbar-brand {
  padding: 0 20px;
  font-size: 35px;
  font-family: "Raleway", sans-serif;
  font-weight: 300;
  color: #006f51;
  text-decoration: none;
  -webkit-font-smoothing: antialiased !important;
}
.navbar .navbar-header .navbar-brand img {
  display: inline-block;
  margin-top: -6px;
}
.navbar .navbar-collapse {
  height: 0px;
  border-bottom: 1px solid #c8c7cc;
  border-top: none;
  background: #ffffff !important;
  padding-left: 15px !important;
  padding-right: 15px !important;
  position: relative;
}


@media (min-width: 992px) {
	#sidebar {
		margin-top: 65px;
    height: 800px;
	}	
	#sidebar:before {
		background-color: inherit;
		border: inherit;
		bottom: 0;
		content: "";
		position: absolute;
		top: 0;
		width: inherit;
		z-index: -1;
		border-right: 1px solid #c8c7cc
	}
	/** styling for app-aside:**/
	.app-aside div {
		-webkit-transform: translateZ(0);
	}
}

/* ---------------------------------------------------------------------- */
/*  Top Navbar
/* ---------------------------------------------------------------------- */

@media (min-width: 768px) {
  .navbar .navbar-header {
    /*width: 260px;*/
  }
}
@media (min-width: 992px) {
  .navbar .navbar-header {
    border-right: 1px solid #c8c7cc;
  }
}

/* ---------------------------------------------------------------------- */
/*  Main Content
/* ---------------------------------------------------------------------- */

.main-content {
  min-height: 100%;
  position: relative;
}

.main-content .container {
  max-width: none !important;
  width: 100% !important;
  display: inline-block;
}

.main-content > .container {
  padding-bottom: 50px;
}

@media (min-width: 992px) {
  .main-content {
    margin-top: 20px;
    margin-left: 260px;
  }
  .app-navbar-fixed .main-content {
    margin-top: 1;
  }
  .app-navbar-fixed .main-content:before, .app-navbar-fixed .main-content:after {
    content: " ";
    display: table;
  }
  .app-navbar-fixed .main-content:after {
    clear: both;
  }
  .app-sidebar-closed .main-content {
    margin-left: 70px;
  }
  .col-md-6 {
    width: 50%;
  }
  .col-md-12 {
    width: 100%;
  }
}

@media (max-width: 991px) {
  .main-content {
    padding-top: 65px;
  }
}


/* ---------------------------------------------------------------------- */
/*  Sidebar
/* ---------------------------------------------------------------------- */

#sidebar {
	width: 260px;
	float: left;
	left: 0;
	bottom: 0;
	background: #f7f7f8;
	overflow: visible;
	z-index: 1051;
}
::selection {
	background: #5F8295;
	text-shadow: none;
	color: #ffffff;
}

#sidebar > div, #sidebar .sidebar-container {
  height: 100%;
}
.app-sidebar-fixed #sidebar > .sidebar-container {
  overflow-y: hidden;
  overflow-x: visible;
  position: relative;
}
.app-mobile #sidebar {
  overflow: auto;
}
#sidebar .wrapper {
  padding: 20px 15px;
}
.app-navbar-fixed.app-sidebar-fixed #sidebar {
  top: 0;
}
#sidebar nav {
  min-height: 100%;
}
@media (min-width: 992px) {
  #sidebar {
    margin-top: 65px;
  }
}
@media (min-width: 992px) and (min-width: 992px) {
  #sidebar:before {
    background-color: inherit;
    border: inherit;
    bottom: 0;
    content: "";
    position: absolute;
    top: 0;
    width: inherit;
    z-index: -1;
    border-right: 1px solid #c8c7cc;
  }
}
@media (min-width: 992px) {
  #sidebar nav {
    border-right: 1px solid #c8c7cc;
  }
  .app-navbar-fixed #sidebar {
    margin-top: 0;
  }
  .app-sidebar-fixed #sidebar {
    position: fixed;
    top: 65px !important;
    margin-top: 0;
  }
  .app-sidebar-fixed #sidebar > div {
    z-index: 1000;
  }
  .app-sidebar-closed #sidebar {
    width: 70px;
  }
}
/* ... */

